--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ img {
 
   <div id="gif">
     <h2>You had no choice 😏</h2>
-    <img src="https://media.giphy.com/media/I0MYt5jPR6QX5pnqM/giphy.gif">
+    <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExcnluYThtczIyaXpjcWtscXZpenl1eWpxeHVvcTByNzgzbDFpc2s4aCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/1JmGiBtqTuehfYxuy9/giphy.gif">
   </div>
 </div>
 
