--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@ img {
 const noButton = document.getElementById("no");
 const yesButton = document.getElementById("yes");
 const gifDiv = document.getElementById("gif");
-
+const bgMusic = document.getElementById("bgMusic");
+  
 noButton.addEventListener("mouseover", () => {
   const x = Math.random() * (window.innerWidth - 100);
   const y = Math.random() * (window.innerHeight - 50);
@@ -81,7 +82,12 @@ noButton.addEventListener("mouseover", () => {
 
 yesButton.addEventListener("click", () => {
   gifDiv.style.display = "block";
+  bgMusic.play().catch(err => {
+    console.log("Music play blocked:", err);
 });
 </script>
+<audio id="bgMusic" loop>
+  <source src="love.mp3" type="audio/mpeg">
+</audio>
 </body>
 </html>
