--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@ const noButton = document.getElementById("no");
 const yesButton = document.getElementById("yes");
 const gifDiv = document.getElementById("gif");
 const bgMusic = document.getElementById("bgMusic");
+const introGif = document.getElementById("introGif");
+const extraGif = document.getElementById("extraGif");
   
 noButton.addEventListener("mouseover", () => {
   const x = Math.random() * (window.innerWidth - 100);
@@ -95,7 +97,7 @@ yesButton.addEventListener("click", () => {
 }); 
 </script>
 <audio id="bgMusic" loop>
-  <source src="love.mp3" type="audio/mp3">
+  <source src="love.mp3" type="audio/mpeg">
 </audio>
 </body>
 </html>
