--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ yesButton.addEventListener("click", () => {
   gifDiv.style.display = "block";
   introGif.style.display = "none";
 
-  // play music
+  bgMusic.currentTime = 0; // 👈 ADD THIS
   bgMusic.play().catch(err => {
     console.log("Music play blocked:", err);
   });
@@ -94,10 +94,15 @@ yesButton.addEventListener("click", () => {
   setTimeout(() => {
     extraGif.style.display = "block";
   }, 1200);
+});
+
+  setTimeout(() => {
+    extraGif.style.display = "block";
+  }, 1200);
 }); 
 </script>
-<audio id="bgMusic" loop>
-  <source src="love.mp3" type="audio/mpeg">
+<audio id="bgMusic" preload="auto" loop>
+  <source src="/valentine/love.mp3" type="audio/mpeg">
 </audio>
 </body>
 </html>
